--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   max-width: 960px;
   font-family: Verdana, Geneva, sans-serif;
   font-size: 100%;
+
 }
 
 nav {
@@ -12,10 +13,59 @@ nav {
   border: 2px solid #49A078;
   border-radius: 8px;
   background-color: #9CC5A1;
+  font-size: 1.1em;
+}
+
+a {
+  color: #0f2e2f;
+}
+
+a:visited {
+  color: #216869;
 }
 
 h1 {
   font-family: Impact, Charcoal, sans-serif;
   color: #216869;
   margin-left: 5px;
+}
+
+#footer-wrapper {
+  position: relative;
+  top: 10px;
+  width: 100%;
+  height: 1em;
+  margin: 10px;
+}
+
+/*Added wrapper for footer in order to have footer stay
+at the bottom of the page.
+Wrapper needs a height for the footer not to intersect with other content,
+especially at narrow widths.*/
+
+footer {
+  position: absolute;
+  bottom: 0;
+  margin: auto;
+  width: 50%;
+  left:1%;
+  right:1%;
+  font-size: 0.7em;
+  color: #216869;
+}
+/*I'm not sure if there is a better way to center the footer.*/
+
+.contact-disclaimer {
+  border: 2px dashed #49A078;
+  padding: 5px;
+  border-radius: 8px;
+  max-width: 480px;
+}
+
+#site-comparison {
+  font-size: 0.8em;
+  margin: 10px 5px;
+  padding: 5px;
+  border: 2px solid #49A078;
+  border-radius: 8px;
 }
